--- a/wiki/fr/Release_notes_1.2.html
+++ b/wiki/fr/Release_notes_1.2.html
@@ -58,12 +58,12 @@ Consultez l'<a href="../fr/Help_FreeCAD.html" title="Help FreeCAD/fr">aide de Fr
 <p><span id="Assembly_Workbench"></span>
 </p>
 <h2><span class="mw-headline" id="Atelier_Assembly">Atelier Assembly</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="Further_Assembly_improvements">Further Assembly improvements</span></h3>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="BIM_Workbench">BIM Workbench</span></h2>
-</div>
+<p><span id="Further_Assembly_improvements"></span>
+</p>
+<h3><span id="Autres_am.C3.A9liorations_d.27Assembly"></span><span class="mw-headline" id="Autres_am&eacute;liorations_d'Assembly">Autres am&eacute;liorations d'Assembly</span></h3>
+<p><span id="BIM_Workbench"></span>
+</p>
+<h2><span class="mw-headline" id="Atelier_BIM">Atelier BIM</span></h2>
 <p>ToDo:
 </p>
 <ul><li><a rel="nofollow" class="external free" href="https://github.com/FreeCAD/FreeCAD/pull/24078">https://github.com/FreeCAD/FreeCAD/pull/24078</a></li>
@@ -71,12 +71,12 @@ Consultez l'<a href="../fr/Help_FreeCAD.html" title="Help FreeCAD/fr">aide de Fr
 <li><a rel="nofollow" class="external free" href="https://github.com/FreeCAD/FreeCAD/pull/24595">https://github.com/FreeCAD/FreeCAD/pull/24595</a></li>
 <li><a rel="nofollow" class="external free" href="https://github.com/FreeCAD/FreeCAD/pull/25086">https://github.com/FreeCAD/FreeCAD/pull/25086</a></li>
 <li><a rel="nofollow" class="external free" href="https://github.com/FreeCAD/FreeCAD/pull/25147">https://github.com/FreeCAD/FreeCAD/pull/25147</a></li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="Further_BIM_improvements">Further BIM improvements</span></h3>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="CAM_Workbench">CAM Workbench</span></h2>
-</div>
+<p><span id="Further_BIM_improvements"></span>
+</p>
+<h3><span id="Autres_am.C3.A9liorations_de_BIM"></span><span class="mw-headline" id="Autres_am&eacute;liorations_de_BIM">Autres am&eacute;liorations de BIM</span></h3>
+<p><span id="CAM_Workbench"></span>
+</p>
+<h2><span class="mw-headline" id="Atelier_CAM">Atelier CAM</span></h2>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h3><span class="mw-headline" id="Further_CAM_improvements">Further CAM improvements</span></h3>
 </div>
@@ -183,12 +183,12 @@ Consultez l'<a href="../fr/Help_FreeCAD.html" title="Help FreeCAD/fr">aide de Fr
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260116201924
+Cached time: 20260116201936
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.073 seconds
-Real time usage: 0.097 seconds
+CPU time usage: 0.063 seconds
+Real time usage: 0.084 seconds
 Preprocessor visited node count: 249/1000000
 Post&#8208;expand include size: 1434/2097152 bytes
 Template argument size: 528/2097152 bytes
@@ -199,14 +199,14 @@ Unstrip post&#8208;expand size: 846/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    5.717      1 -total
- 60.96%    3.485      2 Template:Message
- 29.11%    1.664      1 Template:FileName
- 17.02%    0.973      1 Template:VeryImportantMessage
- 16.11%    0.921      1 Template:TOCright
+100.00%    8.533      1 -total
+ 55.00%    4.693      2 Template:Message
+ 23.24%    1.983      1 Template:VeryImportantMessage
+ 17.80%    1.519      1 Template:TOCright
+ 15.36%    1.311      1 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116201924 and revision id 1739256. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116201935 and revision id 1739262. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
