--- a/wiki/fr/Release_notes_1.2.html
+++ b/wiki/fr/Release_notes_1.2.html
@@ -77,15 +77,15 @@ Consultez l'<a href="../fr/Help_FreeCAD.html" title="Help FreeCAD/fr">aide de Fr
 <p><span id="CAM_Workbench"></span>
 </p>
 <h2><span class="mw-headline" id="Atelier_CAM">Atelier CAM</span></h2>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="Further_CAM_improvements">Further CAM improvements</span></h3>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Draft_Workbench">Draft Workbench</span></h2>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="Further_Draft_improvements">Further Draft improvements</span></h3>
-</div>
+<p><span id="Further_CAM_improvements"></span>
+</p>
+<h3><span id="Autres_am.C3.A9liorations_de_CAM"></span><span class="mw-headline" id="Autres_am&eacute;liorations_de_CAM">Autres am&eacute;liorations de CAM</span></h3>
+<p><span id="Draft_Workbench"></span>
+</p>
+<h2><span class="mw-headline" id="Atelier_Draft">Atelier Draft</span></h2>
+<p><span id="Further_Draft_improvements"></span>
+</p>
+<h3><span id="Autres_am.C3.A9liorations_de_Draft"></span><span class="mw-headline" id="Autres_am&eacute;liorations_de_Draft">Autres am&eacute;liorations de Draft</span></h3>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="FEM_Workbench">FEM Workbench</span></h2>
 </div>
@@ -183,12 +183,12 @@ Consultez l'<a href="../fr/Help_FreeCAD.html" title="Help FreeCAD/fr">aide de Fr
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260116201936
+Cached time: 20260116201942
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.063 seconds
-Real time usage: 0.084 seconds
+CPU time usage: 0.054 seconds
+Real time usage: 0.072 seconds
 Preprocessor visited node count: 249/1000000
 Post&#8208;expand include size: 1434/2097152 bytes
 Template argument size: 528/2097152 bytes
@@ -199,14 +199,14 @@ Unstrip post&#8208;expand size: 846/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    8.533      1 -total
- 55.00%    4.693      2 Template:Message
- 23.24%    1.983      1 Template:VeryImportantMessage
- 17.80%    1.519      1 Template:TOCright
- 15.36%    1.311      1 Template:FileName
+100.00%    7.273      1 -total
+ 55.08%    4.006      2 Template:Message
+ 34.32%    2.496      1 Template:FileName
+ 23.91%    1.739      1 Template:VeryImportantMessage
+ 17.17%    1.249      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116201935 and revision id 1739262. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116201942 and revision id 1739268. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
