--- a/wiki/fr/Release_notes_1.2.html
+++ b/wiki/fr/Release_notes_1.2.html
@@ -86,12 +86,12 @@ Consultez l'<a href="../fr/Help_FreeCAD.html" title="Help FreeCAD/fr">aide de Fr
 <p><span id="Further_Draft_improvements"></span>
 </p>
 <h3><span id="Autres_am.C3.A9liorations_de_Draft"></span><span class="mw-headline" id="Autres_am&eacute;liorations_de_Draft">Autres am&eacute;liorations de Draft</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="FEM_Workbench">FEM Workbench</span></h2>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="Further_FEM_improvements">Further FEM improvements</span></h3>
-</div>
+<p><span id="FEM_Workbench"></span>
+</p>
+<h2><span class="mw-headline" id="Atelier_FEM">Atelier FEM</span></h2>
+<p><span id="Further_FEM_improvements"></span>
+</p>
+<h3><span id="Autres_am.C3.A9liorations_de_FEM"></span><span class="mw-headline" id="Autres_am&eacute;liorations_de_FEM">Autres am&eacute;liorations de FEM</span></h3>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <ul><li>The <span typeof="mw:File"><a href="../index.php?title=FEM_ConstraintElectricChargeDensity.svg&amp;filetimestamp=20250329180554&amp;.html" class="mw-file-description"><img src="../File/FEM_ConstraintElectricChargeDensity.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../FEM_ElectricChargeDensity.html" title="FEM ElectricChargeDensity">Electric Charge Density</a> load now has a <i>Concentrated</i> checkbox in the <i>Total Source</i> mode to use concentrate instead of distributed load (making it also applicable to edges and vertices) with CalculiX. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/25237">Pull request #25237</a></li>
 <li>The <span typeof="mw:File"><a href="../index.php?title=FEM_ResultShow.svg&amp;filetimestamp=20241127174549&amp;.html" class="mw-file-description"><img src="../File/FEM_ResultShow.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../FEM_ResultShow.html" title="FEM ResultShow">FEM results objects</a> now support the animation of half cycles in addition to reversed full cycles. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/24129">Pull request #24129</a></li>
@@ -183,12 +183,12 @@ Consultez l'<a href="../fr/Help_FreeCAD.html" title="Help FreeCAD/fr">aide de Fr
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260116201942
+Cached time: 20260116201947
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.054 seconds
-Real time usage: 0.072 seconds
+CPU time usage: 0.059 seconds
+Real time usage: 0.104 seconds
 Preprocessor visited node count: 249/1000000
 Post&#8208;expand include size: 1434/2097152 bytes
 Template argument size: 528/2097152 bytes
@@ -199,14 +199,14 @@ Unstrip post&#8208;expand size: 846/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.273      1 -total
- 55.08%    4.006      2 Template:Message
- 34.32%    2.496      1 Template:FileName
- 23.91%    1.739      1 Template:VeryImportantMessage
- 17.17%    1.249      1 Template:TOCright
+100.00%   15.806      1 -total
+ 51.81%    8.189      2 Template:Message
+ 28.76%    4.546      1 Template:FileName
+ 28.41%    4.491      1 Template:VeryImportantMessage
+ 17.09%    2.701      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116201942 and revision id 1739268. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116201947 and revision id 1739272. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
