--- a/wiki/fr/Release_notes_1.2.html
+++ b/wiki/fr/Release_notes_1.2.html
@@ -92,11 +92,9 @@ Consultez l'<a href="../fr/Help_FreeCAD.html" title="Help FreeCAD/fr">aide de Fr
 <p><span id="Further_FEM_improvements"></span>
 </p>
 <h3><span id="Autres_am.C3.A9liorations_de_FEM"></span><span class="mw-headline" id="Autres_am&eacute;liorations_de_FEM">Autres am&eacute;liorations de FEM</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<ul><li>The <span typeof="mw:File"><a href="../index.php?title=FEM_ConstraintElectricChargeDensity.svg&amp;filetimestamp=20250329180554&amp;.html" class="mw-file-description"><img src="../File/FEM_ConstraintElectricChargeDensity.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../FEM_ElectricChargeDensity.html" title="FEM ElectricChargeDensity">Electric Charge Density</a> load now has a <i>Concentrated</i> checkbox in the <i>Total Source</i> mode to use concentrate instead of distributed load (making it also applicable to edges and vertices) with CalculiX. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/25237">Pull request #25237</a></li>
-<li>The <span typeof="mw:File"><a href="../index.php?title=FEM_ResultShow.svg&amp;filetimestamp=20241127174549&amp;.html" class="mw-file-description"><img src="../File/FEM_ResultShow.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../FEM_ResultShow.html" title="FEM ResultShow">FEM results objects</a> now support the animation of half cycles in addition to reversed full cycles. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/24129">Pull request #24129</a></li>
-<li>The <span typeof="mw:File"><a href="../index.php?title=FEM_ConstraintSectionPrint.svg&amp;filetimestamp=20241127174351&amp;.html" class="mw-file-description"><img src="../File/FEM_ConstraintSectionPrint.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../FEM_ConstraintSectionPrint.html" title="FEM ConstraintSectionPrint">Section Print</a> feature now supports 2D models and electric flux in electrostatic analyses. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/25081">Pull request #25081</a></li></ul>
-</div>
+<ul><li>La <span typeof="mw:File"><a href="../index.php?title=FEM_ConstraintElectricChargeDensity.svg&amp;filetimestamp=20250329180554&amp;.html" class="mw-file-description"><img src="../File/FEM_ConstraintElectricChargeDensity.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/FEM_ElectricChargeDensity.html" title="FEM ElectricChargeDensity/fr">densit&eacute; de charge &eacute;lectrique</a> dispose d&eacute;sormais d'une case &agrave; cocher &laquo;&nbsp;Concentr&eacute;e&nbsp;&raquo; dans le mode &laquo;&nbsp;Source totale&nbsp;&raquo; pour utiliser une charge concentr&eacute;e au lieu d'une charge distribu&eacute;e (ce qui la rend &eacute;galement applicable aux ar&ecirc;tes et aux sommets) avec CalculiX. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/25237">Pull request #25237</a></li>
+<li>Les <span typeof="mw:File"><a href="../index.php?title=FEM_ResultShow.svg&amp;filetimestamp=20241127174549&amp;.html" class="mw-file-description"><img src="../File/FEM_ResultShow.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/FEM_ResultShow.html" title="FEM ResultShow/fr">r&eacute;sultats de FEM</a> prennent d&eacute;sormais en charge l'animation de demi-cycles en plus des cycles complets invers&eacute;s. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/24129">Pull request #24129</a></li>
+<li>La fonction <span typeof="mw:File"><a href="../index.php?title=FEM_ConstraintSectionPrint.svg&amp;filetimestamp=20241127174351&amp;.html" class="mw-file-description"><img src="../File/FEM_ConstraintSectionPrint.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/FEM_ConstraintSectionPrint.html" title="FEM ConstraintSectionPrint/fr">Enregistrer les r&eacute;sultats par section</a> prend d&eacute;sormais en charge les mod&egrave;les 2D et le flux &eacute;lectrique dans les analyses &eacute;lectrostatiques. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/25081">Pull request #25081</a></li></ul>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="Inspection_Workbench">Inspection Workbench</span></h2>
 </div>
@@ -183,13 +181,13 @@ Consultez l'<a href="../fr/Help_FreeCAD.html" title="Help FreeCAD/fr">aide de Fr
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260116201947
+Cached time: 20260116202137
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.059 seconds
-Real time usage: 0.104 seconds
-Preprocessor visited node count: 249/1000000
+CPU time usage: 0.053 seconds
+Real time usage: 0.069 seconds
+Preprocessor visited node count: 248/1000000
 Post&#8208;expand include size: 1434/2097152 bytes
 Template argument size: 528/2097152 bytes
 Highest expansion depth: 5/100
@@ -199,14 +197,14 @@ Unstrip post&#8208;expand size: 846/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   15.806      1 -total
- 51.81%    8.189      2 Template:Message
- 28.76%    4.546      1 Template:FileName
- 28.41%    4.491      1 Template:VeryImportantMessage
- 17.09%    2.701      1 Template:TOCright
+100.00%    7.204      1 -total
+ 43.73%    3.150      2 Template:Message
+ 30.25%    2.179      1 Template:VeryImportantMessage
+ 22.29%    1.606      1 Template:FileName
+ 20.81%    1.499      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116201947 and revision id 1739272. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116202136 and revision id 1739274. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
