--- a/wiki/fr/Release_notes_1.2.html
+++ b/wiki/fr/Release_notes_1.2.html
@@ -95,12 +95,12 @@ Consultez l'<a href="../fr/Help_FreeCAD.html" title="Help FreeCAD/fr">aide de Fr
 <ul><li>La <span typeof="mw:File"><a href="../index.php?title=FEM_ConstraintElectricChargeDensity.svg&amp;filetimestamp=20250329180554&amp;.html" class="mw-file-description"><img src="../File/FEM_ConstraintElectricChargeDensity.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/FEM_ElectricChargeDensity.html" title="FEM ElectricChargeDensity/fr">densit&eacute; de charge &eacute;lectrique</a> dispose d&eacute;sormais d'une case &agrave; cocher &laquo;&nbsp;Concentr&eacute;e&nbsp;&raquo; dans le mode &laquo;&nbsp;Source totale&nbsp;&raquo; pour utiliser une charge concentr&eacute;e au lieu d'une charge distribu&eacute;e (ce qui la rend &eacute;galement applicable aux ar&ecirc;tes et aux sommets) avec CalculiX. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/25237">Pull request #25237</a></li>
 <li>Les <span typeof="mw:File"><a href="../index.php?title=FEM_ResultShow.svg&amp;filetimestamp=20241127174549&amp;.html" class="mw-file-description"><img src="../File/FEM_ResultShow.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/FEM_ResultShow.html" title="FEM ResultShow/fr">r&eacute;sultats de FEM</a> prennent d&eacute;sormais en charge l'animation de demi-cycles en plus des cycles complets invers&eacute;s. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/24129">Pull request #24129</a></li>
 <li>La fonction <span typeof="mw:File"><a href="../index.php?title=FEM_ConstraintSectionPrint.svg&amp;filetimestamp=20241127174351&amp;.html" class="mw-file-description"><img src="../File/FEM_ConstraintSectionPrint.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> <a href="../fr/FEM_ConstraintSectionPrint.html" title="FEM ConstraintSectionPrint/fr">Enregistrer les r&eacute;sultats par section</a> prend d&eacute;sormais en charge les mod&egrave;les 2D et le flux &eacute;lectrique dans les analyses &eacute;lectrostatiques. <a rel="nofollow" class="external text" href="https://github.com/FreeCAD/FreeCAD/pull/25081">Pull request #25081</a></li></ul>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Inspection_Workbench">Inspection Workbench</span></h2>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="Further_Inspection_improvements">Further Inspection improvements</span></h3>
-</div>
+<p><span id="Inspection_Workbench"></span>
+</p>
+<h2><span class="mw-headline" id="Atelier_Inspection">Atelier Inspection</span></h2>
+<p><span id="Further_Inspection_improvements"></span>
+</p>
+<h3><span id="Autres_am.C3.A9liorations_de_Inspection"></span><span class="mw-headline" id="Autres_am&eacute;liorations_de_Inspection">Autres am&eacute;liorations de Inspection</span></h3>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="Material_Workbench">Material Workbench</span></h2>
 </div>
@@ -181,12 +181,12 @@ Consultez l'<a href="../fr/Help_FreeCAD.html" title="Help FreeCAD/fr">aide de Fr
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260116202137
+Cached time: 20260116202157
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.053 seconds
-Real time usage: 0.069 seconds
+CPU time usage: 0.050 seconds
+Real time usage: 0.074 seconds
 Preprocessor visited node count: 248/1000000
 Post&#8208;expand include size: 1434/2097152 bytes
 Template argument size: 528/2097152 bytes
@@ -197,14 +197,14 @@ Unstrip post&#8208;expand size: 846/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    7.204      1 -total
- 43.73%    3.150      2 Template:Message
- 30.25%    2.179      1 Template:VeryImportantMessage
- 22.29%    1.606      1 Template:FileName
- 20.81%    1.499      1 Template:TOCright
+100.00%    8.074      1 -total
+ 43.58%    3.519      2 Template:Message
+ 29.23%    2.360      1 Template:VeryImportantMessage
+ 23.31%    1.882      1 Template:TOCright
+ 21.17%    1.709      1 Template:FileName
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116202136 and revision id 1739274. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116202157 and revision id 1739278. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
