--- a/wiki/fr/Release_notes_1.2.html
+++ b/wiki/fr/Release_notes_1.2.html
@@ -107,12 +107,12 @@ Consultez l'<a href="../fr/Help_FreeCAD.html" title="Help FreeCAD/fr">aide de Fr
 <p><span id="Further_Material_improvements"></span>
 </p>
 <h3><span id="Autres_am.C3.A9liorations_de_Material"></span><span class="mw-headline" id="Autres_am&eacute;liorations_de_Material">Autres am&eacute;liorations de Material</span></h3>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h2><span class="mw-headline" id="Mesh_Workbench">Mesh Workbench</span></h2>
-</div>
-<div lang="en" dir="ltr" class="mw-content-ltr">
-<h3><span class="mw-headline" id="Further_Mesh_improvements">Further Mesh improvements</span></h3>
-</div>
+<p><span id="Mesh_Workbench"></span>
+</p>
+<h2><span class="mw-headline" id="Atelier_Mesh">Atelier Mesh</span></h2>
+<p><span id="Further_Mesh_improvements"></span>
+</p>
+<h3><span id="Autres_am.C3.A9liorations_de_Mesh"></span><span class="mw-headline" id="Autres_am&eacute;liorations_de_Mesh">Autres am&eacute;liorations de Mesh</span></h3>
 <div lang="en" dir="ltr" class="mw-content-ltr">
 <h2><span class="mw-headline" id="OpenSCAD_Workbench">OpenSCAD Workbench</span></h2>
 </div>
@@ -181,12 +181,12 @@ Consultez l'<a href="../fr/Help_FreeCAD.html" title="Help FreeCAD/fr">aide de Fr
 </div>
 <!-- 
 NewPP limit report
-Cached time: 20260116202202
+Cached time: 20260116202208
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.068 seconds
-Real time usage: 0.086 seconds
+CPU time usage: 0.057 seconds
+Real time usage: 0.069 seconds
 Preprocessor visited node count: 248/1000000
 Post&#8208;expand include size: 1434/2097152 bytes
 Template argument size: 528/2097152 bytes
@@ -197,14 +197,14 @@ Unstrip post&#8208;expand size: 846/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.892      1 -total
- 53.54%    5.296      2 Template:Message
- 25.58%    2.530      1 Template:VeryImportantMessage
- 22.03%    2.179      1 Template:FileName
- 16.14%    1.597      1 Template:TOCright
+100.00%    6.193      1 -total
+ 46.39%    2.873      2 Template:Message
+ 30.07%    1.862      1 Template:VeryImportantMessage
+ 19.28%    1.194      1 Template:FileName
+ 17.54%    1.086      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116202202 and revision id 1739282. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:411416-0!canonical and timestamp 20260116202208 and revision id 1739286. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
