--- a/wiki/fr/Template;Part_Tools_navi.html
+++ b/wiki/fr/Template;Part_Tools_navi.html
@@ -7,7 +7,7 @@
 <hr>
 <ul><li><b>Bool&eacute;en&nbsp;:</b> <a href="../fr/Part_Compound.html" title="Part Compound/fr">Compos&eacute;</a>, <a href="../fr/Part_ExplodeCompound.html" title="Part ExplodeCompound/fr">&Eacute;clater le compos&eacute;</a>, <a href="../fr/Part_CompoundFilter.html" title="Part CompoundFilter/fr">Filtre de compos&eacute;</a>, <a href="../fr/Part_Boolean.html" title="Part Boolean/fr">Op&eacute;rations bool&eacute;ennes</a>, <a href="../fr/Part_Cut.html" title="Part Cut/fr">Soustraction</a>, <a href="../fr/Part_Fuse.html" title="Part Fuse/fr">Union</a>, <a href="../fr/Part_Common.html" title="Part Common/fr">Intersection</a>, <a href="../fr/Part_JoinConnect.html" title="Part JoinConnect/fr">Connecter</a>, <a href="../fr/Part_JoinEmbed.html" title="Part JoinEmbed/fr">Int&eacute;grer</a>, <a href="../fr/Part_JoinCutout.html" title="Part JoinCutout/fr">D&eacute;couper</a>, <a href="../fr/Part_BooleanFragments.html" title="Part BooleanFragments/fr">Fragments bool&eacute;ens</a>, <a href="../fr/Part_SliceApart.html" title="Part SliceApart/fr">S&eacute;parer/exploser</a>, <a href="../fr/Part_Slice.html" title="Part Slice/fr">S&eacute;parer en compos&eacute;s</a>, <a href="../fr/Part_XOR.html" title="Part XOR/fr">OU exclusif</a>, <a href="../fr/Part_CheckGeometry.html" title="Part CheckGeometry/fr">V&eacute;rifier la g&eacute;om&eacute;trie</a>, <a href="../fr/Part_Defeaturing.html" title="Part Defeaturing/fr">Supprimer la fonction</a></li></ul>
 <hr>
-<ul><li><b>Autre outils&nbsp;:</b> <a href="../fr/Part_BoxSelection.html" title="Part BoxSelection/fr">S&eacute;lection par bo&icirc;te</a>, <a href="../fr/Part_ShapeFromMesh.html" title="Part ShapeFromMesh/fr">Forme &agrave; partir d'un maillage</a>, <a href="../fr/Part_PointsFromMesh.html" title="Part PointsFromMesh/fr">Points &agrave; partir d'un maillage</a>, <a href="../fr/Part_MakeSolid.html" title="Part MakeSolid/fr">Convertir en solide</a>, <a href="../fr/Part_ReverseShape.html" title="Part ReverseShape/fr">Inverser les formes</a>, <a href="../fr/Part_SimpleCopy.html" title="Part SimpleCopy/fr">Copie simple</a>, <a href="../fr/Part_TransformedCopy.html" title="Part TransformedCopy/fr">Copie transform&eacute;e</a>, <a href="../fr/Part_ElementCopy.html" title="Part ElementCopy/fr">Copie d'un &eacute;l&eacute;ment</a>, <a href="../fr/Part_RefineShape.html" title="Part RefineShape/fr">Affiner la forme</a>, <a href="../fr/Part_ToleranceSet.html" title="Part ToleranceSet/fr">D&eacute;finir une tol&eacute;rance</a>, <a href="../fr/Part_SectionCut.html" title="Part SectionCut/fr">Cr&eacute;er une coupe persistante</a>,  <a href="../fr/Part_EditAttachment.html" title="Part EditAttachment/fr">Ancrer</a></li></ul>
+<ul><li><b>Autre outils&nbsp;:</b> <a href="../fr/Part_BoxSelection.html" title="Part BoxSelection/fr">S&eacute;lection de faces par bo&icirc;te</a>, <a href="../fr/Part_ShapeFromMesh.html" title="Part ShapeFromMesh/fr">Forme &agrave; partir d'un maillage</a>, <a href="../fr/Part_PointsFromMesh.html" title="Part PointsFromMesh/fr">Points &agrave; partir d'un maillage</a>, <a href="../fr/Part_MakeSolid.html" title="Part MakeSolid/fr">Convertir en solide</a>, <a href="../fr/Part_ReverseShape.html" title="Part ReverseShape/fr">Inverser les formes</a>, <a href="../fr/Part_SimpleCopy.html" title="Part SimpleCopy/fr">Copie simple</a>, <a href="../fr/Part_TransformedCopy.html" title="Part TransformedCopy/fr">Copie transform&eacute;e</a>, <a href="../fr/Part_ElementCopy.html" title="Part ElementCopy/fr">Copie d'un &eacute;l&eacute;ment</a>, <a href="../fr/Part_RefineShape.html" title="Part RefineShape/fr">Affiner la forme</a>, <a href="../fr/Part_ToleranceSet.html" title="Part ToleranceSet/fr">D&eacute;finir une tol&eacute;rance</a>, <a href="../fr/Part_SectionCut.html" title="Part SectionCut/fr">Cr&eacute;er une coupe persistante</a>,  <a href="../fr/Part_EditAttachment.html" title="Part EditAttachment/fr">Ancrer</a></li></ul>
 <hr>
 <ul><li><b>Pr&eacute;f&eacute;rences&nbsp;:</b> <a href="../fr/PartDesign_Preferences.html" title="PartDesign Preferences/fr">Pr&eacute;f&eacute;rences</a>, <a href="../fr/Fine-tuning.html" title="Fine-tuning/fr">R&eacute;glage fin</a></li></ul></div>
     </div></div>
@@ -20,15 +20,15 @@
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260116214734
+Cached time: 20260116215020
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.023 seconds
-Real time usage: 0.069 seconds
+CPU time usage: 0.015 seconds
+Real time usage: 0.018 seconds
 Preprocessor visited node count: 76/1000000
-Post&#8208;expand include size: 3363/2097152 bytes
-Template argument size: 2355/2097152 bytes
+Post&#8208;expand include size: 3372/2097152 bytes
+Template argument size: 2364/2097152 bytes
 Highest expansion depth: 4/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -36,11 +36,11 @@ Unstrip post&#8208;expand size: 36/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    4.594      1 Template:Navigation_menu_2
-100.00%    4.594      1 -total
+100.00%    2.297      1 Template:Navigation_menu_2
+100.00%    2.297      1 -total
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:138152-0!canonical and timestamp 20260116214730 and revision id 1739337. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:138152-0!canonical and timestamp 20260116215047 and revision id 1739338. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
