--- a/wiki/fr/Template;Robot_Tools_navi.html
+++ b/wiki/fr/Template;Robot_Tools_navi.html
@@ -1,11 +1,9 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Template:Robot Tools navi/fr</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="NavFrame" style="margin: 0px; text-align: center; border-collapse: collapse; font-size: 100%; border-top-style: double; border-top-style: 1px; clear:both;">
     <div class="NavHead mw-collapsible mw-collapsed" style="margin: 1px; font-weight: normal; background-color: var(--background-color-neutral-subtle, #fefefe);"><a href="../fr/Robot_Workbench.html" title="Robot Workbench/fr">Barre d'outils du robot</a> <span typeof="mw:File"><a href="../index.php?title=Workbench_Robot.svg&amp;filetimestamp=20200404173908&amp;.html" class="mw-file-description"><img src="../File/Workbench_Robot.svg" decoding="async" width="24" height="24" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span>
         <div class="NavContent mw-collapsible-content" style="margin: 10px; border: 1px solid var(--border-color-base, #aaaaaa); text-align: left; border-collapse: collapse; font-weight: normal; font-size: 100%; clear:both; margin-top: 1px; background-color: var(--background-color-neutral-subtle, #fefefe);">
-<ul><li><b>Robots&nbsp;:</b> <a href="../fr/Robot_CreateRobot.html" title="Robot CreateRobot/fr">Placer un robot</a>, <a href="../fr/Robot_CreateTrajectory.html" title="Robot CreateTrajectory/fr">Simuler une trajectoire</a>, <a href="../fr/Robot_InsertWaypoint.html" title="Robot InsertWaypoint/fr">Point de passage</a>,</li></ul>
-<p><a href="../fr/Robot_Edge2Trac.html" title="Robot Edge2Trac/fr">Edge to Trajectory</a>, <a href="../fr/Robot_TrajectoryDressUp.html" title="Robot TrajectoryDressUp/fr">Dress-Up Trajectory</a>, <a href="../fr/Robot_TrajectoryCompound.html" title="Robot TrajectoryCompound/fr">Trajectory Compound</a>, <a href="../fr/Robot_SetHomePos.html" title="Robot SetHomePos/fr">D&eacute;finir la positon de d&eacute;part</a>, <a href="../fr/Robot_RestoreHomePos.html" title="Robot RestoreHomePos/fr">Passer &agrave; la positon de d&eacute;part</a>, <a href="../fr/Robot_Simulate.html" title="Robot Simulate/fr">Simulate Trajectory</a>
-</p>
-<ul><li><b>Outils d'exportation&nbsp;:</b> <a href="../fr/Robot_ExportKukaCompact.html" title="Robot ExportKukaCompact/fr">Kuka Compact Subroutine</a>, <a href="../fr/Robot_ExportKukaFull.html" title="Robot ExportKukaFull/fr">Kuka Full Subroutine</a></li></ul>
-<ul><li><b>Autres outils&nbsp;:</b> <a href="../fr/Robot_AddToolShape.html" title="Robot AddToolShape/fr">Tool</a>, <a href="../fr/Robot_SetDefaultOrientation.html" title="Robot SetDefaultOrientation/fr">Set Default Orientation</a>, <a href="../fr/Robot_SetDefaultValues.html" title="Robot SetDefaultValues/fr">Set Default Values</a></li></ul></div>
+<ul><li><b>Robots&nbsp;:</b> <a href="../fr/Robot_CreateRobot.html" title="Robot CreateRobot/fr">Cr&eacute;ation de robot</a>, <a href="../fr/Robot_CreateTrajectory.html" title="Robot CreateTrajectory/fr">Cr&eacute;er une trajectoire</a>, <a href="../fr/Robot_InsertWaypoint.html" title="Robot InsertWaypoint/fr">Point de passage</a>, <a href="../fr/Robot_Edge2Trac.html" title="Robot Edge2Trac/fr">Trajectoire &agrave; partir d'ar&ecirc;tes</a>, <a href="../fr/Robot_TrajectoryDressUp.html" title="Robot TrajectoryDressUp/fr">Modifier la trajectoire</a>, <a href="../fr/Robot_TrajectoryCompound.html" title="Robot TrajectoryCompound/fr">R&eacute;unir des trajectoires</a>, <a href="../fr/Robot_SetHomePos.html" title="Robot SetHomePos/fr">D&eacute;finir la position d'origine</a>, <a href="../fr/Robot_RestoreHomePos.html" title="Robot RestoreHomePos/fr">Retour vers position d'origine</a>, <a href="../fr/Robot_Simulate.html" title="Robot Simulate/fr">Simuler une trajectoire</a></li></ul>
+<ul><li><b>Outils d'exportation&nbsp;:</b> <a href="../fr/Robot_ExportKukaCompact.html" title="Robot ExportKukaCompact/fr">Exporter Kuka compact</a>, <a href="../fr/Robot_ExportKukaFull.html" title="Robot ExportKukaFull/fr">Exporter Kuka complet</a></li></ul>
+<ul><li><b>Autres outils&nbsp;:</b> <a href="../fr/Robot_AddToolShape.html" title="Robot AddToolShape/fr">Outil</a>, <a href="../fr/Robot_SetDefaultOrientation.html" title="Robot SetDefaultOrientation/fr">Orientation par d&eacute;faut</a>, <a href="../fr/Robot_SetDefaultValues.html" title="Robot SetDefaultValues/fr">Valeurs par d&eacute;faut</a></li></ul></div>
     </div></div>
 <hr>
 <p>Use this template on all user manual pages for the <a href="../Robot_Workbench.html" title="Robot Workbench">Robot Workbench</a> by placing the following text at the bottom of the page:
@@ -16,15 +14,15 @@
 </p>
 <!-- 
 NewPP limit report
-Cached time: 20260116221407
+Cached time: 20260116222514
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.011 seconds
+CPU time usage: 0.012 seconds
 Real time usage: 0.013 seconds
 Preprocessor visited node count: 34/1000000
-Post&#8208;expand include size: 1732/2097152 bytes
-Template argument size: 850/2097152 bytes
+Post&#8208;expand include size: 1760/2097152 bytes
+Template argument size: 878/2097152 bytes
 Highest expansion depth: 4/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
@@ -32,11 +30,11 @@ Unstrip post&#8208;expand size: 37/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    2.132      1 Template:Navigation_menu_2
-100.00%    2.132      1 -total
+100.00%    2.448      1 Template:Navigation_menu_2
+100.00%    2.448      1 -total
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:138862-0!canonical and timestamp 20260116221433 and revision id 1739340. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:138862-0!canonical and timestamp 20260116222619 and revision id 1739341. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
